--- a/s33-final-artist-npm/package.json
+++ b/s33-final-artist-npm/package.json
@@ -13,7 +13,8 @@
     "@material-tailwind/react": "^2.1.9",
     "firebase": "^10.12.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -25,6 +26,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.11"
   }
 }
